First sonar refactor